k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cs7cs3-journey-sharing-deploy
  labels:
    app: cs7cs3-journey-sharing
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cs7cs3-journey-sharing
  template:
    metadata:
      labels:
        app: cs7cs3-journey-sharing
    spec:
      containers:
        - name: cs7cs3-journey-sharing
          image: ghcr.io/cs7cs3/cs7cs3:master
          ports:
            - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cs7cs3-mariadb-deploy
  labels:
    app: cs7cs3-mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cs7cs3-mariadb
  template:
    metadata:
      labels:
        app: cs7cs3-mariadb
    spec:
      containers:
        - name: cs7cs3-mariadb
          image: docker.io/library/mariadb:10.6
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: shared
              mountPath: /docker-entrypoint-initdb.d
            - name: mariadb-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: shared
          emptyDir: {}
        - name: mariadb-persistent-storage
          persistentVolumeClaim:
            claimName: cs7cs3-mariadb-pvc
