k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cs7cs3-journey-sharing
  name: cs7cs3-journey-sharing-service
spec:
  type: LoadBalancer
  selector:
    app: cs7cs3-journey-sharing
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
